fix(ContactForm, Projects, Styles): update contact information and improve layout styles for better presentation; adjust color properties and spacing for enhanced readability

--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -475,11 +475,11 @@
     .action-buttons-top {
       position: absolute;
       top: 50px;
-      left: 56px;
+      left: 89px;
       display: flex;
       gap: 15px;
       z-index: 10;
-      width: 90%;
+      width: auto;
 
       .action-button {
         background-color: transparent;
@@ -529,7 +529,7 @@
         .info-title {
           font-size: 0.8rem;
           color: #1a3c72;
-          font-weight: 600;
+          font-weight: 500;
           margin-bottom: 5px;
           text-align: center;
         }
@@ -984,7 +984,7 @@
   }
 
   .project-list-page .property-card .info-boxes {
-    gap: 1.62rem;
+    gap: 0.8rem;
   }
 
   .project-list-page .vertical-text-left {
